# ConfLabelReader

./: .gitignore  BindingProfile.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  vcpkg.json
ConfLabelReader/: CMakeLists.txt  ConfLabelReader.cpp
ExiDecoder/: CMakeLists.txt
ExiDecoder/src/: main.cpp
LabelDemux/: AccessUnit.cpp  AccessUnit.h  CMakeLists.txt  LabelDemux.cpp  LabelDemux.h  LabelDemuxImpl.cpp  LabelDemuxImpl.h  LabelDemuxTypes.h  LibLabelReader.h  Pid2TypeMap.cpp  Pid2TypeMap.h  README.md  XmlWriter.cpp  XmlWriter.h  dllmain.cpp  framework.h  labeldemux_export.h
LabelDemux/include/LabelDemux/: LabelDemux.h  LabelDemuxTypes.h
LabelDemux/src/: AccessUnit.cpp  AccessUnit.h  LabelDemux.cpp  LabelDemuxImpl.cpp  LabelDemuxImpl.h  Pid2TypeMap.cpp  Pid2TypeMap.h  pch.cpp
LibLabelReader/: AccessUnit.cpp  AccessUnit.h  CMakeLists.txt  LabelReader.cpp  LabelReader.h  LabelReaderImpl.cpp  LabelReaderImpl.h  LibLabelReader.h  Pid2TypeMap.cpp  Pid2TypeMap.h  XmlWriter.cpp  XmlWriter.h  dllmain.cpp  framework.h
Sample/: example1.exi  foreman_cif_klv.ts  foreman_cif_klv_4774.ts  foreman_cif_klv_4774brl.ts  foreman_cif_klv_4774xml.ts
exi2xml/: CMakeLists.txt  XmlWriter.cpp
exi2xml/include/exi2xml/: XmlWriter.h
exi2xml/src/: XmlWriter.cpp
exipCMake/: CMakeLists.txt  README.md
src/: CmdLineParser.cpp  CmdLineParser.h  UdpOStream.cpp  UdpOStream.h  main.cpp
